MINOR: dark theme for floating filter, fixed misaligned borders

--- a/css/TableFilterSort.css
+++ b/css/TableFilterSort.css
@@ -117,8 +117,18 @@
     display: none;
 }
 
+.tfs-holder.fixed-header .floating-table th{
+    /* border: 0; */
+}
+
 .fixed-header .tfs-filter-form-holder{
     z-index: 8;
+    background-color: #575757;
+    border-color: #999;
+}
+
+.fixed-header .tfs-current-search-holder{
+    color: #fff;
 }
 
 .fixed-header .tfs-filter-form-holder,
@@ -127,8 +137,4 @@
     top: 0;
     visibility: visible;
     margin-bottom: 0;
-}
-
-.fixed-header.filter-is-open .tfs-filter-form-holder {
-    position: relative;
 }
